# parcera

./: .clinerules  .gitignore  .mise.toml  README.md  parcera.spec  pyproject.toml  requirements.txt  setup.py
docs/: setup_plan.md  technical_design.md
src/: main.py
src/app/: __init__.py  ui.py
src/app/audio/: __init__.py  controller.py  stream.py  vad.py
