[project]
name = "parcera"
version = "0.1.0"
description = "A Python application for audio file manipulation"
authors = [
    {name = "AquiTCD"}
]
requires-python = "==3.12.9"
dependencies = [
    "pyinstaller==6.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.3",
    "black>=23.11.0",
    "isort>=5.12.0",
    "mypy>=1.7.1",
    "flake8>=6.1.0",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
